# gtest_template_cpp

./: CMakeLists.txt  gtest.cmake  unit_main-t.cpp
apps/: CMakeLists.txt  main.cpp
libs/module1/: CMakeLists.txt
libs/module1/include/: module1.hpp
libs/module1/src/: module1.cpp
libs/module1/unit/: module1-t.cpp
libs/module2/: CMakeLists.txt
libs/module2/include/: module2.hpp
libs/module2/src/: module2.cpp
libs/module2/unit/: module2-t.cpp
